Добавлена картинка рубашки и создана тестовая функция по скрытию карт

--- a/css/main.css
+++ b/css/main.css
@@ -65,3 +65,7 @@ td {
     background-image: url("../img/8.png");
     background-size: contain;
 }
+.backImg {
+    background-image: url("../img/back.jpg");
+    background-size: cover;
+}
