--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
 
 html, body {
     width: 100%;
+    font-family: Arial, sans-serif;
 }
 
 .container {
@@ -28,7 +29,6 @@ table {
 }
 
 td {
-    border: 1px solid black;
     width: 36px;
     height: 50px;
 }
@@ -68,4 +68,17 @@ td {
 .backImg {
     background-image: url("../img/back.jpg");
     background-size: cover;
+}
+
+#startBtn {
+    width: 50px;
+    height: 25px;
+    font-size: 0.5em;
+    border-radius: 10px;
+    margin-left: 45%;
+    margin-top: 10px;
+}
+
+#instructions {
+    text-align: center;
 }
