--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@ html, body {
     margin-top: 20px;
     background-image: url("../img/wood _texture1055.jpg");
     background-size: cover;
+    position: relative;
 }
 
 table {
@@ -81,4 +82,12 @@ td {
 
 #instructions {
     text-align: center;
+}
+
+#tryCounter {
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    color: white;
+    display: none;
 }
